--- a/WeekendCode/index.html
+++ b/WeekendCode/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <title>ejercicios mentales</title>
     <link rel="stylesheet" tyoe="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/13f344541d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="menu">
-        <i class="fas fa-home"></i>
-        <button>inicio</button>
-        <button>juegos</button>
-        <button>lectura</button>
-    </div>
-    <div id="timer">0</div>
-    <div id="game">
+    <nav>
+        <a class="home" href="/"><img src="images/inicio.png" width="30"/></a>
+        <ul>
+            <li class="linea"><a href="#">JUEGOS</a></li>
+            <li class="linea"><a href="#">LECTURA</a></li>
+            
+        </ul>
+    </nav>
+    <div>
         
     </div>
     <script src="code.js"></script>
