--- a/WeekendCode/game.html
+++ b/WeekendCode/game.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>ejercicios mentales</title>
-    <link rel="stylesheet" tyoe="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/13f344541d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="menu">
-        <i class="fas fa-home"></i>
         <button>inicio</button>
         <button>juegos</button>
         <button>lectura</button>
     </div>
-    <script src="code.js"></script>
+    <div id="timer">0</div>
+    <div id="game">
+        
+    </div>
+    <script src="gameEngine.js"></script>
 </body>
 </html>
