--- a/WeekendCode/juegos.html
+++ b/WeekendCode/juegos.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ejercicios mentales</title>
+        <title>juegos</title>
         <link rel="stylesheet" tyoe="text/css" href="css/style.css">
     </head>
     <body>
@@ -14,7 +14,10 @@
                 
             </ul>
         </nav>
-        <div>
+        <div class="juegos"> 
+            <h1>SALA DE JUEGOS </h1>
+            <img src="images/portadamemorice.png" alt="60">
+            <h2>MEMORICE</h2>
             
         </div>
         <script src="js/code.js"></script>
