eliminacion y renombre de html

--- a/WeekendCode/juegos.html
+++ b/WeekendCode/juegos.html
@@ -7,12 +7,14 @@
     </head>
     <body>
         <nav>
-            <a class="home" href="/"><img src="images/inicio.png" width="30"/></a>
-            <ul>
-                <li class="linea"><a href="#">JUEGOS</a></li>
-                <li class="linea"><a href="#">LECTURA</a></li>
-                
-            </ul>
+            <a class="home" href="index.html"><img src="images/inicio.png" width="30"/></a>
+            <div class="right">
+                <ul>
+                    <li class="linea"><a href="game.html">JUEGOS</a></li>
+                    <li class="linea"><a href="#">LECTURA</a></li>
+                    
+                </ul>
+            </div>
         </nav>
         <div class="juegos"> 
             <h1>SALA DE JUEGOS </h1>
