--- a/WeekendCode/memorice.html
+++ b/WeekendCode/memorice.html
@@ -18,7 +18,15 @@
     </nav>
     <div id="timer">0</div>
     <div id="game">
-        
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
+        <div class="card" ></div>
     </div>
     <script src="gameEngine.js"></script>
 </body>
