--- a/WeekendCode/index.html
+++ b/WeekendCode/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>ejercicios mentales</title>
-        <link rel="stylesheet" tyoe="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <nav>
@@ -16,8 +16,9 @@
                 </ul>
             </div>
         </nav>
-        <div>
-            
+        <div class="encabezado">
+            <h1>¡BIENVENIDOS!</h1>
+            <p>Ejercita tu mente mientras te entretinenes en nuestra sala de juegos </p>
         </div>
         <script src="js/code.js"></script>
     </body>
