subiendo mecanicas del memorice

--- a/WeekendCode/memorice.html
+++ b/WeekendCode/memorice.html
@@ -19,19 +19,7 @@
     <div id="timer">0</div>
     
     <div id="game">
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
-            <div class="card" ></div>
     </div>
-    <script src="js/gameEngine.js"></script>
+    <script src="js/memoriceEngine.js"></script>
 </body>
 </html>
