--- a/WeekendCode/juegos.html
+++ b/WeekendCode/juegos.html
@@ -18,10 +18,16 @@
         </nav>
         <div class="juegos"> 
             <h1>SALA DE JUEGOS </h1>
-            <a href="memorice.html"><img src="images/portadamemorice.png" alt="60"></a>
-            <h2>MEMORICE</h2>
+            <div class="contenedor">
+                <a href="memorice.html"><img src="images/portadamemorice.png" alt="60"></a>
+                <h2>MEMORICE</h2>
+            </div>
+            <div class="contenedor">
+                <a href="puzzle.html"><img src="images/piezapuzzle.png" alt="60"></a>
+                <h2>PUZZLES</h2>
+            </div>
+            
             
         </div>
-        <script src="js/code.js"></script>
     </body>
 </html>
