--- a/WeekendCode/memorice.html
+++ b/WeekendCode/memorice.html
@@ -16,7 +16,7 @@
             </ul>
         </div>
     </nav>
-    <div id="timer">0</div>
+    <div id="intentos">0</div>
     
     <div id="game">
     </div>
