--- a/WeekendCode/index.html
+++ b/WeekendCode/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="encabezado">
             <h1>¡BIENVENIDOS!</h1>
-            <p>Ejercita tu mente mientras te entretinenes en nuestra sala de juegos </p>
+            <p>Ejercita tu mente mientras te entretinenes en nuestra sala de juegos gratis</p>
         </div>
     </body>
 </html>
