--- a/WeekendCode/puzzle.html
+++ b/WeekendCode/puzzle.html
@@ -19,22 +19,22 @@
         <h1>PUZZLE</h1>
         <div class="paisaje"> 
             <svg width="1000" height="480" id="recuadro">
-                <g id="fondo"><image xlink:href="images/paisaje.png" width="600" height="400" x="220" y="50"></g>
-                <g><image xlink:href="images/puzzle/1.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/2.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/3.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/4.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/5.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/6.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/7.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/8.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/9.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/10.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/11.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/12.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/13.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/14.png" class="pieza"></g>
-                <g><image xlink:href="images/puzzle/15.png" class="pieza"></g>
+                <g id="fondo"><image xlink:href="images/paisaje.png" width="582" height="400" x="220" y="50"></g>
+                <g class="herencia" id="0"><image xlink:href="images/puzzle/1.png" class="pieza"></g>
+                <g class="herencia" id="1"><image xlink:href="images/puzzle/2.png" class="pieza"></g>
+                <g class="herencia" id="2"><image xlink:href="images/puzzle/3.png" class="pieza"></g>
+                <g class="herencia" id="3"><image xlink:href="images/puzzle/4.png" class="pieza"></g>
+                <g class="herencia" id="4"><image xlink:href="images/puzzle/5.png" class="pieza"></g>
+                <g class="herencia" id="5"><image xlink:href="images/puzzle/6.png" class="pieza"></g>
+                <g class="herencia" id="6"><image xlink:href="images/puzzle/7.png" class="pieza"></g>
+                <g class="herencia" id="7"><image xlink:href="images/puzzle/8.png" class="pieza"></g>
+                <g class="herencia" id="8"><image xlink:href="images/puzzle/9.png" class="pieza"></g>
+                <g class="herencia" id="9"><image xlink:href="images/puzzle/10.png" class="pieza"></g>
+                <g class="herencia" id="10"><image xlink:href="images/puzzle/11.png" class="pieza"></g>
+                <g class="herencia" id="11"><image xlink:href="images/puzzle/12.png" class="pieza"></g>
+                <g class="herencia" id="12"><image xlink:href="images/puzzle/13.png" class="pieza"></g>
+                <g class="herencia" id="13"><image xlink:href="images/puzzle/14.png" class="pieza"></g>
+                <g class="herencia" id="14"><image xlink:href="images/puzzle/15.png" class="pieza"></g>
             </svg>
         </div>
         <script src="js/code.js"></script>
