--- a/WeekendCode/index.html
+++ b/WeekendCode/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <a class="home" href="index.html"><img src="images/inicio.png" width="30"/></a>
+            <a class="home" href="index.html"><img src="images/inicio.png" width="40"/></a>
             <div class="right">
                 <ul>
                     <li class="linea"><a href="juegos.html">JUEGOS</a></li>
@@ -16,9 +16,21 @@
                 </ul>
             </div>
         </nav>
-        <div class="encabezado">
+        <div id="encabezado">
             <h1>¡BIENVENIDOS!</h1>
-            <p>Ejercita tu mente mientras te entretinenes en nuestra sala de juegos gratis</p>
+            <div class="botoniz">
+                <h2>SALA DE JUEGOS</h2>
+                <a href="juegos.html"><img src="images/juegos.png" width="300"></a>
+                <p>Ejercita tu mente mientras <br>
+                    te entretienes en nuestra<br>
+                    sala de juegos gratis
+                </p> 
+            </div>
+            <div class="botonder">
+                <h2>SALA DE LECTURA</h2>
+                <a href="lectura.html"><img src="images/libro.png" width="300"></a>
+                <p>aquí encontraras libros, cuentos virtuales, articulos y noticias</p>
+            </div>
         </div>
     </body>
 </html>
