--- a/WeekendCode/index.html
+++ b/WeekendCode/index.html
@@ -11,7 +11,7 @@
             <div class="right">
                 <ul>
                     <li class="linea"><a href="juegos.html">JUEGOS</a></li>
-                    <li class="linea"><a href="#">LECTURA</a></li>
+                    <li class="linea"><a href="lectura.html">LECTURA</a></li>
                     
                 </ul>
             </div>
@@ -21,15 +21,16 @@
             <div class="botoniz">
                 <h2>SALA DE JUEGOS</h2>
                 <a href="juegos.html"><img src="images/juegos.png" width="300"></a>
-                <p>Ejercita tu mente mientras <br>
-                    te entretienes en nuestra<br>
-                    sala de juegos gratis
+                <p>Ejercita tu mente mientras te<br>
+                     entretienes en nuestra sala<br>
+                     de juegos gratis
                 </p> 
             </div>
             <div class="botonder">
                 <h2>SALA DE LECTURA</h2>
                 <a href="lectura.html"><img src="images/libro.png" width="300"></a>
-                <p>aquí encontraras libros, cuentos virtuales, articulos y noticias</p>
+                <p>Aquí encontraras libros, cuentos, <br>
+                    articulos y noticias</p>
             </div>
         </div>
     </body>
