--- a/WeekendCode/memorice.html
+++ b/WeekendCode/memorice.html
@@ -11,7 +11,7 @@
         <div class="right">
             <ul>
                 <li class="linea"><a href="juegos.html">JUEGOS</a></li>
-                <li class="linea"><a href="#">LECTURA</a></li> 
+                <li class="linea"><a href="lectura.html">LECTURA</a></li> 
             </ul>
         </div>
     </nav>
