--- a/WeekendCode/puzzle.html
+++ b/WeekendCode/puzzle.html
@@ -10,7 +10,7 @@
             <a class="home" href="index.html"><img src="images/inicio.png" width="30"/></a>
             <div class="right">
                 <ul>
-                    <li class="linea"><a href="game.html">JUEGOS</a></li>
+                    <li class="linea"><a href="juegos.html">JUEGOS</a></li>
                     <li class="linea"><a href="#">LECTURA</a></li>
                     
                 </ul>
