--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="botonder">
                 <h2>SALA DE LECTURA</h2>
                 <a href="lectura.html"><img src="images/libro.png" width="300"></a>
-                <p>Aquí encontraras libros, cuentos, <br>
-                    articulos y noticias</p>
+                <p>Aquí encontraras información de <br>
+                   cuentos, articulos, noticias, etc.</p>
             </div>
         </div>
     </body>
